Bug#43049 - Assertion during updateCardinalities() at startup.  Make sure the cardinalities thread does not run updateCardinalities() the first time until after recovery has finished.  There is a small gap of time after the serialLog is created and before recovoery starts when serialLog->recovering == false.  But the first 1 second sleep should cover for that.